# graphics-db

./: .env.example  .gitignore  Dockerfile.setup  LICENSE  NOTES.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.sh
References/: objaverse_retriever.py
data/: README.md
data/objaverse/: README.md  download_objathor_weights.py
src/graphics_db_server/: logging.py  main.py
src/graphics_db_server/api/v0/endpoints/: assets.py  materials.py  objects.py
src/graphics_db_server/core/: config.py
src/graphics_db_server/db/: base_crud.py  crud.py  objaverse_crud.py  polyhaven_crud.py  session.py
src/graphics_db_server/embeddings/: clip.py  sbert.py
src/graphics_db_server/schemas/: __init__.py  asset.py  base_asset.py  objaverse_asset.py  polyhaven_asset.py
src/graphics_db_server/scripts/: ingest_data.py  init_db.py
src/graphics_db_server/sources/: from_objaverse.py  from_polyhaven.py  objaverse.py
src/graphics_db_server/utils/: asset_validation.py  geometry.py  thumbnail.py
tests/: test_asset_retrieval.py  test_health_check.py  test_material_retrieval.py  test_thumbnail_retrieval.py
