[project]
name = "graphics-db-server"
version = "0.0.1"
description = " Search and download graphics assets."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Yunho Cho", email = "opensource@yunhocho.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["psycopg[binary]", "pgvector", "numpy", "loguru", "rich"]

[project.urls]
"Homepage" = "https://github.com/yunho-c/graphics-db"
"Bug Tracker" = "https://github.com/yunho-c/graphics-db/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/graphics_db_server/__init__.py"

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]
